<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="ltr"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_white_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:id="@+id/linear_start_game"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/img_clock"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/clock"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reaction_header"
            android:fontFamily="@font/cairo_bold"
            android:textColor="@color/white"
            android:textSize="28sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reaction_game_description"
            android:fontFamily="@font/cairo_regular"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAlignment="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_gameplay_red"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/red"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wait_for_green"
            android:fontFamily="@font/cairo_bold"
            android:textColor="@color/white"
            android:textSize="40sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_gameplay_green"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/green"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap"
            android:fontFamily="@font/cairo_bold"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_regular"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_gameplay_keep_going"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/text_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:textColor="@color/white"
            android:textSize="40sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_keep_going"
            android:fontFamily="@font/cairo_regular"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:paddingBottom="8dp"/>

        <TextView
            android:id="@+id/text_tries_keep_going"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_regular"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_gameplay_too_soon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/too_soon"
            android:fontFamily="@font/cairo_bold"
            android:textColor="@color/white"
            android:textSize="40sp"/>

        <TextView
            android:id="@+id/timer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_regular"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/text_tries_too_soon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_regular"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_result"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/finished_result_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:textColor="@color/white"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/finished_result_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:textColor="@color/white"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finished"
            android:fontFamily="@font/cairo_regular"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="15dp"
            android:text="@string/save_score"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/cairo_regular"
            android:textAllCaps="false"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="15dp"
            android:text="@string/try_again"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/cairo_regular"
            android:textAllCaps="false"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>