<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layoutDirection="ltr">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/app_bar">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/tool_bar"
                android:background="@color/colorPrimary">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textSize="24sp"
                        android:textColor="@color/white"
                        android:padding="5dp"
                        android:fontFamily="@font/cairo_bold"/>

                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:id="@+id/reaction_time"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/background_border_white">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@mipmap/clock"
                android:layout_marginStart="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reaction_time_fragment"
                android:fontFamily="@font/cairo_bold"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:layout_marginStart="15dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/aim_trainer"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/background_border_white">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/accuracy"
                android:layout_marginStart="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aim_trainer_fragment"
                android:fontFamily="@font/cairo_bold"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:layout_marginStart="15dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/number_memory"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/background_border_white">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@mipmap/numbers"
                android:layout_marginStart="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_memory_fragment"
                android:fontFamily="@font/cairo_bold"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:layout_marginStart="15dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/verbal_memory"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/background_border_white">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/book"
                android:layout_marginStart="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verbal_memory_fragment"
                android:fontFamily="@font/cairo_bold"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:layout_marginStart="15dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/chimp_test"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/background_border_white">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/chimp"
                android:layout_marginStart="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chimp_test_fragment"
                android:fontFamily="@font/cairo_bold"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:layout_marginStart="15dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/visual_memory"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/background_border_white">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/squares"
                android:layout_marginStart="25dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visual_memory_fragment"
                android:fontFamily="@font/cairo_bold"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:layout_marginStart="15dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/show_scores"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/background_border_white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_your_scores_fragment"
                android:fontFamily="@font/cairo_bold"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
