<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:layoutDirection="ltr">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_white_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:id="@+id/linear_start_game"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/numbers"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_header"
            android:fontFamily="@font/cairo_bold"
            android:textColor="@color/white"
            android:textSize="28sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numbers_game_description"
            android:fontFamily="@font/cairo_regular"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAlignment="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="15dp"
            android:text="@string/start"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/cairo_regular"
            android:textAllCaps="false"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_gameplay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/text_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:textColor="@color/white"
            android:textSize="40sp"/>

        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:indeterminate="false"
            android:progressDrawable="@drawable/horizontal_progress_bar"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:progress="20"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_answer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_what_was_the_number"
            android:fontFamily="@font/cairo_bold"
            android:textColor="@color/white"
            android:textSize="28sp"/>

        <EditText
            android:id="@+id/user_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="34sp"
            android:inputType="number"
            android:background="@drawable/rounded_edit_text"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:fontFamily="@font/cairo_regular" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:fontFamily="@font/cairo_regular"
            android:textColor="@color/light_grey"
            android:textSize="28sp"/>

        <TextView
            android:id="@+id/text_right_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_regular"
            android:textColor="@color/white"
            android:textSize="28sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_answer"
            android:fontFamily="@font/cairo_regular"
            android:textColor="@color/light_grey"
            android:textSize="28sp"/>

        <TextView
            android:id="@+id/text_user_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_regular"
            android:textColor="@color/white"
            android:textSize="28sp"/>

        <TextView
            android:id="@+id/text_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_regular"
            android:textColor="@color/white"
            android:textSize="28sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="20dp"
            android:text="@string/save_score"
            android:textSize="18sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false"
            android:fontFamily="@font/cairo_regular"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false"
            android:fontFamily="@font/cairo_regular" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>